webapps.wiki: simplify and fix resize issue on mobile.

--- a/extra/webapps/wiki/wiki-contents.css
+++ b/extra/webapps/wiki/wiki-contents.css
@@ -20,6 +20,8 @@
 
 @media screen and (max-width: 600px) {
     #left {
+        position: absolute;
+        margin-top: 40px;
         display: none;
     }
 
